# libgroupsig

./: .gitignore  .test.txt.swp  CMakeCache.txt  CMakeLists.txt  build.sh  env  mem_test
cmake_modules/: gcovr.cmake  gtest.cmake  mcl.cmake
src/crypto/: spk.c  spk.h
src/groupsig/: CMakeLists.txt  groupsig.c
src/groupsig/bap24/: CMakeLists.txt  gml.c  gml.h  grp_key.c  grp_key.h  identity.c  join_mem.c  join_mgr.c  link.c  mem_key.c  mem_key.h  mgr_key.c  mgr_key.h  open.c  open_verify.c  proof.c  proof.h  setup.c  sign.c  sign_hw.c  signature.c  signature.h  verify.c  verify_hw.c  verify_link.c
src/groupsig/dl21seq/: identity.c
src/groupsig/ps16/: join_mem.c
src/groupsig/scsl25/: CMakeLists.txt  grp_key.c  grp_key.h  identify.c  identity.c  identity.h  join_mem.c  join_mgr.c  link.c  mem_key.c  mem_key.h  mgr_key.c  mgr_key.h  proof.c  proof.h  seqlink.c  setup.c  sign.c  signature.c  signature.h  verify.c  verify_link.c  verify_seqlink.c
src/groupsig/sltgs23/: CMakeLists.txt  bld_key.c  bld_key.h  blind.c  blindsig.c  blindsig.h  claim.c  claim_verify.c  convert.c  env.c  gml.c  gml.h  grp_key.c  grp_key.h  identify.c  identity.c  identity.h  join_mem.c  join_mgr.c  mem_key.c  mem_key.h  mgr_key.c  mgr_key.h  open.c  proof.c  proof.h  reveal.c  setup.c  sign.c  signature.c  signature.h  trace.c  trapdoor.c  unblind.c  update_env.c  verify.c
src/include/: bap24.h  bld_key_handles.h  blindsig_handles.h  cgogroupsig.h  gml_handles.h  groupsig.h  grp_key_handles.h  identity_handles.h  mem_key_handles.h  mgr_key_handles.h  proof_handles.h  registered_groupsigs.h  scsl25.h  signature_handles.h  sltgs23.h
src/shim/: pbc_ext.c  pbc_ext.h
src/test/: CMakeLists.txt  test_bap24.cpp  test_dl21seq.cpp  test_scsl25.cpp  test_sltgs23.cpp
src/wrappers/nodejs/jsgroupsig/cmake_modules/: libgroupsig.cmake
src/wrappers/python/samples/: sign_bbs04.py
